--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -99,9 +99,7 @@
     </div>
   </div>
 
-  <div class="container  mb-5">
-    <p class="text-muted ml-5">Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></p>
-  </div>
+
 
     <!-- Analysis -->
   <div class = 'row'><!-- 
@@ -122,7 +120,7 @@
 
   <div class = 'row'>
 <!--     <div class="col-md-8"> -->
-      <div class = 'container shadow card my-5' >
+      <div class = 'container shadow card mt-5' >
         <article>
           <h4 class = 'text-primary mt-3'>
             Since when have the Summer and Winter games no longer been held in the same year?
@@ -137,6 +135,10 @@
               of an Olympiad and the Winter Games held in the third year.</p>
         </article>
       </div>
+
+<!--         <div class="container  mb-5"> -->
+    <p class="text-muted ml-5">Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></p>
+<!--   </div> -->
     </div>
   </div>
 
