--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -110,13 +110,24 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
   <section class="container-fluid my-3 text-center">
     <br>
-    <a class="text-danger" href="#predicted_medals"><h5>Medal Prediction</a> | <a class="text-danger" href="#gymnastic_body_comp"> Olympic Medalists</a></h5>
+    <a class="text-danger" href="#predicted_medals_2016"><h5>Medal Prediction (2016)</a> | <a class="text-danger" href="#predicted_medals_2020">Medal Prediction (2020)</a></h5>
     <br>
   </section>
 
   <div class="container">
-      <h2 class="text-danger ml-5 my-5 text-center" >Predicted Total Medals</h2>
+      <h2 class="text-danger ml-5 my-5 text-center" >Medal Prediction (2016)</h2>
   </div>
+
+<!-- SECTION FOR LINKING LINEAR AND LOGISTIC REGRESSION MODELS -->
+<!--   <section class="container-fluid my-3 text-center">
+    <br>
+    <a class="text-danger" href="#predicted_medals"><h5>Medal Prediction</a> | <a class="text-danger" href="#gymnastic_body_comp"> Olympic Medalists</a></h5>
+    <br>
+  </section> -->
+
+<!--   <div class="container">
+      <h2 class="text-danger ml-5 my-5 text-center" >Predicted Total Medals</h2>
+  </div> -->
 
 
 <!-- Table - Predicted count -Linear Regressionand ARIMA-->
@@ -135,11 +146,11 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
 <hr>
 
-<!-- Table - Predicted count -Linear Regressionand -->
+<!-- Table - Predicted count -Linear Regression -->
      <div class="container"> 
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression Model: Top 10 Predicted count(2016)</h5>
+          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals_2016">Linear Regression Model: Top 10 Predicted count(2016)</h5>
         </div>
         <div class="card-body">
 
@@ -152,12 +163,17 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
       </div>
     </div>
 
+<hr>
+
+  <div class="container" id="predicted_medals_2020">
+      <h2 class="text-danger ml-5 mt-5 mb-3 text-center">Medal Prediction (2020)</h2>
+  </div>
 
 <!-- Predicted 2020 -->
-<!--      <div class="container"> 
+     <div class="container"> 
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression: Top 10 Countries Predicted count for 2020</h5>
+          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">LINEAR REGRESSION MODEL: TOP 10 PREDICTED COUNT(2020)</h5>
         </div>
         <div class="card-body">
           <div id="table-area" class="">
@@ -179,6 +195,39 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
                   <td>21</td>
                   <td>80</td>
                 </tr>
+                  <td>China</td>
+                  <td>13</td>
+                  <td>8</td>
+                  <td>8</td>
+                  <td>29</td>
+                </tr>
+                  <td>UK</td>
+                  <td>6</td>
+                  <td>9</td>
+                  <td>7</td>
+                  <td>24</td>
+                </tr>  
+                  <td>Russia</td>
+                  <td>19</td>
+                  <td>15</td>
+                  <td>13</td>
+                  <td>49</td>
+                </tr>  
+                <tr>
+                  <td>France</td>
+                  <td>5</td>
+                  <td>6</td>
+                  <td>7</td>
+                  <td>17</td>
+                </tr>
+                 <tr>
+                  <td>Germany</td>
+                  <td>8</td>
+                  <td>10</td>
+                  <td>11</td>
+                  <td>28</td>
+                </tr>
+                <tr>               
                 <tr>
                   <td>Japan</td>
                   <td>20</td>
@@ -186,13 +235,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
                   <td>14</td>
                   <td>52</td>
                 </tr>
-                <tr>
-                  <td>Russia</td>
-                  <td>19</td>
-                  <td>15</td>
-                  <td>13</td>
-                  <td>49</td>
-                </tr>                                
+                <tr>         
                 <tr>
                   <td>Australia</td>
                   <td>12</td>
@@ -201,33 +244,6 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
                   <td>38</td>
                 </tr>
                 <tr>
-                  <td>China</td>
-                  <td>13</td>
-                  <td>8</td>
-                  <td>8</td>
-                  <td>29</td>
-                </tr>
-                <tr>
-                  <td>Germany</td>
-                  <td>8</td>
-                  <td>10</td>
-                  <td>11</td>
-                  <td>28</td>
-                </tr>
-                <tr>
-                  <td>UK</td>
-                  <td>6</td>
-                  <td>9</td>
-                  <td>7</td>
-                  <td>24</td>
-                </tr>
-                <tr>
-                  <td>France</td>
-                  <td>5</td>
-                  <td>6</td>
-                  <td>7</td>
-                  <td>17</td>
-                </tr>
                 <tr>
                   <td>Italy</td>
                   <td>7</td>
@@ -236,11 +252,11 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
                   <td>17</td>
                 </tr>
                 <tr>
-                  <td>Netherlands</td>
-                  <td>4</td>
-                  <td>6</td>
+                  <td>Canada</td>
+                  <td>3</td>
                   <td>5</td>
-                  <td>16</td>
+                  <td>5</td>
+                  <td>13</td>
                 </tr>                                                                                                
 
               </tbody>
@@ -248,19 +264,17 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
 
-
-<hr>
-
-  <div class="container" id="gymnastic_body_comp">
+<!-- TABLE VISUAL FOR LOGISTIC REGRESSION -->
+<!-- <hr> -->
+ <!--  <div class="container" id="gymnastic_body_comp">
       <h2 class="text-danger ml-5 mt-5 mb-3 text-center">Predicted Olympic Medalists for 2020</h2>
-  </div>
-
+  </div> -->
 
           <!-- Table - Actual count -->
-         <div class="container"> 
+<!--          <div class="container"> 
           <div class="card shadow mb-4">
             <div class="card-header py-3">
               <h5 class="m-0 font-weight-bold text-info text-center">Logistic Regression: Olympic Medalists</h5>
@@ -321,8 +335,6 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
             </table>
           </div>
-
-            
             
               <img src="../static/assets/images/images_chart2/individual_sports.PNG" alt="Individual sports" style="width:50%" class="rounded float-left">
               <img src="../static/assets/images/images_chart2/team_sports.PNG" alt="Team Sports" style="width:50%" class="rounded float-right">
@@ -331,17 +343,10 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
         </div>
       </div>
-    </div>
+    </div> -->
 
 
-
-
-
-<div class="container">
-
-</div>
-
-
+<div class="container"></div>
 
 
 <hr>
