formatting source html

--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -94,7 +94,7 @@
     
     <!-- Replay button -->
   <div class = 'container'>
-    <div class = 'row col-md-9'>
+    <div class = 'row col-md-9 mb-5'>
       <button class = "btn btn-info mb-2 ml-5" onclick = "location.reload();">Replay</button>
     </div>
   </div>
@@ -136,9 +136,9 @@
         </article>
       </div>
 
-<!--         <div class="container  mb-5"> -->
+       <div class="container  mb-5">
     <p class="text-muted ml-5">Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></p>
-<!--   </div> -->
+  </div>
     </div>
   </div>
 
