--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -136,8 +136,8 @@
         </article>
       </div>
 
-       <div class="container  mb-5">
-    <p class="text-muted ml-5">Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></p>
+       <div class="container mb-5">
+        <p class="text-muted"><small>Source: <a href="https://bl.ocks.org/jrzief/raw/70f1f8a5d066a286da3a1e699823470f/">Bl.ocks.org</a></small></p>
   </div>
     </div>
   </div>
