--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -86,7 +86,8 @@
 <!-- Input code here for visualizations -->
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
-  <div class="container chart my-5">
+<!--   <div class="container chart my-5"> -->
+  <div class="container-fluid chart ml-5">
     <div class = 'barChartRace'>
         <!-- Bar Chart Race will be appended here*/ -->
     </div>
