adjusting chart width

--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -87,7 +87,7 @@
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
 <!--   <div class="container chart my-5"> -->
-  <div class="container-fluid chart ml-5">
+  <div class="container chart ml-5">
     <div class = 'barChartRace'>
         <!-- Bar Chart Race will be appended here*/ -->
     </div>
