adjusting chart width

--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -21,6 +21,16 @@
   <!-- Link to customized stylesheet -->
   <link rel="stylesheet" href="../static/assets/css/style_chart0.css">
 </head>
+
+<style>
+    #barChartRace {
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+      }
+</style>
 <body>
 
 
