--- a/static/assets/css/style_chart0.css
+++ b/static/assets/css/style_chart0.css
@@ -1,8 +1,10 @@
 .barChartRace{
 
   padding-left: 20px;
+  padding-right: 20px;
   padding-top: 20px;
   margin-left: 30px;
+  margin-right: 30px;
   margin-top: 50px;
   margin-bottom: 50px;
 
