--- a/static/assets/css/style_chart0.css
+++ b/static/assets/css/style_chart0.css
@@ -1,10 +1,8 @@
 .barChartRace{
 
   padding-left: 20px;
-  padding-right: 20px;
   padding-top: 20px;
   margin-left: 30px;
-  margin-right: 30px;
   margin-top: 50px;
   margin-bottom: 50px;
 
@@ -72,6 +70,6 @@ text.yearText{
   stroke: #aaaaaa;
 }
 
-path.domain{
-  display: none;
+/*path.domain{
+  display: none;*/
 }
