updating chart 2 - rm 1st analysis

--- a/templates/chart2.html
+++ b/templates/chart2.html
@@ -72,7 +72,7 @@
   
   <section id="header" class="text-center">
       <h1 class="mb-5 display-3 content">Medals VS GDP</h1>
-      <h2 class="mb-5 content">Does money buy medals?</h2>
+      <!-- <h2 class="mb-5 content">Does money buy medals?</h2> -->
   </section>
 </div>
 
@@ -85,7 +85,7 @@
     <div class= "container d-flex justify-content-center ">
       <div class="row">
           <div class="col-md-12">
-              <h2>Sport Participation and Popularity</h2>
+              <!-- <h2>Sport Participation and Popularity</h2> -->
               <p></p>
                 <div id="plot"></div>
           </div>
@@ -95,13 +95,13 @@
     <div class= "container d-flex justify-content-center">
       <div class="row card shadow">
           <div class="col-md-12">
-            <h2 class ="mt-3 ml-3">Analysis: Relationship between GDP and Olympic Medals</h2>
+            <h2 class ="mt-3 ml-3"><em>Analysis: Relationship between GDP and Olympic Medals</h2>
             <p class="mb-3 ml-3">There is a significant relationship between a nation’s GDP and the number of gold medals they win at the Olympics.
             <br>
             The top 10 countries with the most medals all have GDPs of more than 1 billion dollars, while the 10 countries with the fewest medals have GDPs well below 1 billion. The average GDP for gold medal winning countries is $1,062,860,000.
             <br>
             China has seen phenomenal economic growth over the last couple of decades, which has corresponded with China’s emergence as a global force in international sports.
-            </p>
+            </p></em></p>
           </div>
       </div>
     </div>
