--- a/templates/chart0.html
+++ b/templates/chart0.html
@@ -22,14 +22,6 @@
   <link rel="stylesheet" href="../static/assets/css/style_chart0.css">
 </head>
 
-<style>
-    #barChartRace {
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-      }
 </style>
 <body>
 
@@ -97,7 +89,7 @@
 <!--------------------------><!-------------------------->
 <!--------------------------><!-------------------------->
 <!--   <div class="container chart my-5"> -->
-  <div class="container chart ml-5">
+  <div class="container chart ml-5" style="margin-left: 30px">
     <div class = 'barChartRace'>
         <!-- Bar Chart Race will be appended here*/ -->
     </div>
