--- a/templates/test.html
+++ b/templates/test.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 
 <title>Olympics - Visualization & Prediction</title>
-  
+ 
+   <!-- Link to D3 -->
+  <script src="https://d3js.org/d3.v5.min.js"></script> 
 
   <!-- Link to customized stylesheet -->
 <!--   <link rel="stylesheet" href="../static/assets/css/style_chart0.css"> -->
