--- a/templates/test.html
+++ b/templates/test.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 
 <title>Olympics - Visualization & Prediction</title>
+
+  <!-- Bootstrap 4 Link -->
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
  
    <!-- Link to D3 -->
   <script src="https://d3js.org/d3.v5.min.js"></script> 
